--- a/ChoETL.NACHA/ChoETL.NACHA.csproj
+++ b/ChoETL.NACHA/ChoETL.NACHA.csproj
@@ -51,6 +51,9 @@
     <Compile Include="ChoFileHeaderRecord.cs" />
     <Compile Include="ChoEntryDetailRecord.cs" />
     <Compile Include="ChoNACHAReader.cs" />
+    <Compile Include="ChoNACHAWriter.cs" />
+    <Compile Include="ChoNACHAConfiguration.cs" />
+    <Compile Include="ChoNACHAConfigurationException.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
