FIX: User reported 'Message: Sequence contains no elements' while creating NACHA file.

--- a/ChoETL.NACHATest/ChoETL.NACHATest.csproj
+++ b/ChoETL.NACHATest/ChoETL.NACHATest.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="20151027B0000327P018CHK.ACH" />
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
@@ -61,6 +62,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>COPY $(ProjectDir)*ACH $(TargetDir)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
