--- a/ChoETL.NACHA/ChoETL.NACHA.csproj
+++ b/ChoETL.NACHA/ChoETL.NACHA.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Exceptions\ChoNACHAConfigurationException.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\ChoImmediateOriginValidatorAttribute.cs" />
     <Compile Include="Shared\ChoNACHARunningStat.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
