--- a/ChoETL.NACHATest/ChoETL.NACHATest.csproj
+++ b/ChoETL.NACHATest/ChoETL.NACHATest.csproj
@@ -35,9 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ChoETL, Version=1.0.7.6, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ChoETL.1.0.7.6\lib\ChoETL.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="ChoETL, Version=1.1.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ChoETL.1.1.0.2\lib\net45\ChoETL.dll</HintPath>
     </Reference>
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -45,6 +44,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
