--- a/ChoETL.NACHATest/ChoETL.NACHATest.csproj
+++ b/ChoETL.NACHATest/ChoETL.NACHATest.csproj
@@ -35,8 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ChoETL, Version=1.1.0.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ChoETL.1.1.0.2\lib\net45\ChoETL.dll</HintPath>
+    <Reference Include="ChoETL, Version=1.1.0.4, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ChoETL.1.1.0.4\lib\net45\ChoETL.dll</HintPath>
     </Reference>
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -59,7 +59,9 @@
   <ItemGroup>
     <None Include="20151027B0000327P018CHK.ACH" />
     <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ChoETL.NACHA\ChoETL.NACHA.csproj">
