--- a/ChoETL.NACHA.Core/ChoETL.NACHA.NETStandard.csproj
+++ b/ChoETL.NACHA.Core/ChoETL.NACHA.NETStandard.csproj
@@ -15,7 +15,15 @@
     <RepositoryType>GitHub</RepositoryType>
     <PackageTags>ETL c# .NET NACHA</PackageTags>
     <PackageReleaseNotes>.NET Standard version</PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <Compile Include="..\ChoETL.NACHA\ChoNACHABatchWriter.cs" Link="ChoNACHABatchWriter.cs" />
