--- a/ChoETL.NACHA.Core/ChoETL.NACHA.NETStandard.csproj
+++ b/ChoETL.NACHA.Core/ChoETL.NACHA.NETStandard.csproj
@@ -15,6 +15,8 @@
     <RepositoryType>GitHub</RepositoryType>
     <PackageTags>ETL c# .NET NACHA</PackageTags>
     <PackageReleaseNotes>.NET Standard version</PackageReleaseNotes>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>ChoETL.NACHA.Core.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -44,7 +46,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ChoETL.NETStandard" Version="1.2.1.12" />
+    <PackageReference Include="ChoETL.NETStandard" Version="1.2.1.13" />
   </ItemGroup>
 
 </Project>
