--- a/ChoETL.NACHA/ChoETL.NACHA.csproj
+++ b/ChoETL.NACHA/ChoETL.NACHA.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChoNACHAEntryDetailWriter.cs" />
+    <Compile Include="Records\ChoNACHAReturnAddendaRecord.cs" />
     <Compile Include="Records\ChoNACHABatchControlRecord.cs" />
     <Compile Include="Records\ChoNACHABatchHeaderRecord.cs" />
     <Compile Include="Records\ChoNACHAAddendaRecord.cs" />
