--- a/ChoETL.NACHA.Core/ChoETL.NACHA.NETStandard.csproj
+++ b/ChoETL.NACHA.Core/ChoETL.NACHA.NETStandard.csproj
@@ -1,10 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Version>1.0.2.3</Version>
-
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Cinchoo</Authors>
     <Company>Cinchoo Inc.</Company>
@@ -21,12 +18,9 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
-
-
   <ItemGroup>
     <Compile Include="..\ChoETL.NACHA\ChoNACHABatchWriter.cs" Link="ChoNACHABatchWriter.cs" />
     <Compile Include="..\ChoETL.NACHA\ChoNACHAEntryDetailWriter.cs" Link="ChoNACHAEntryDetailWriter.cs" />
@@ -46,16 +40,13 @@
     <Compile Include="..\ChoETL.NACHA\Shared\ChoImmediateOriginValidatorAttribute.cs" Link="Shared\ChoImmediateOriginValidatorAttribute.cs" />
     <Compile Include="..\ChoETL.NACHA\Shared\ChoNACHARunningStat.cs" Link="Shared\ChoNACHARunningStat.cs" />
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="Configuration\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Shared\" />
     <Folder Include="Records\" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="ChoETL.NETStandard" Version="1.2.1.28" />
   </ItemGroup>
-
 </Project>
