--- a/ChoETL.NACHA/ChoETL.NACHA.csproj
+++ b/ChoETL.NACHA/ChoETL.NACHA.csproj
@@ -1,34 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8BDB0366-75FD-452F-9AF0-E3ED320575B7}</ProjectGuid>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ChoETL.NACHA</RootNamespace>
-    <AssemblyName>ChoETL.NACHA</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWPF>true</UseWPF>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -37,53 +13,11 @@
     <AssemblyOriginatorKeyFile>ChoETL.NACHA.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ChoETL, Version=1.2.1.28, Culture=neutral, PublicKeyToken=8138733ed69d3172, processorArchitecture=MSIL">
-      <HintPath>..\packages\ChoETL.1.2.1.28\lib\net45\ChoETL.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="ChoETL" Version="1.2.1.28" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SystemWebAdapters" Version="1.3.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ChoNACHAEntryDetailWriter.cs" />
-    <Compile Include="Records\ChoNACHAReturnAddendaRecord.cs" />
-    <Compile Include="Records\ChoNACHABatchControlRecord.cs" />
-    <Compile Include="Records\ChoNACHABatchHeaderRecord.cs" />
-    <Compile Include="Records\ChoNACHAAddendaRecord.cs" />
-    <Compile Include="Records\ChoNACHAFileControlRecord.cs" />
-    <Compile Include="Records\ChoNACHAFileHeaderRecord.cs" />
-    <Compile Include="Records\ChoNACHAEntryDetailRecord.cs" />
-    <Compile Include="ChoNACHABatchWriter.cs" />
-    <Compile Include="Exceptions\ChoNACHAException.cs" />
-    <Compile Include="ChoNACHAReader.cs" />
-    <Compile Include="ChoNACHAWriter.cs" />
-    <Compile Include="Configuration\ChoNACHAConfiguration.cs" />
-    <Compile Include="Exceptions\ChoNACHAConfigurationException.cs" />
-    <Compile Include="Enums.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shared\ChoImmediateOriginValidatorAttribute.cs" />
-    <Compile Include="Shared\ChoNACHARunningStat.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ChoETL.NACHA.snk" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
